--- a/app/routes/_index/route.module.scss
+++ b/app/routes/_index/route.module.scss
@@ -7,5 +7,28 @@
     background-color: rgba(0, 0, 0, 0);
 }
 .labelWithArrow {
-    background-color: var(--text-color);
+   
+}
+.hero {
+    height: 100vh;
+}
+.newIn {
+    height: 100vh;
+    background-color: #da3838;
+}
+.categories {
+}
+.bestSellers {
+}
+.colorSelector {
+}
+.spotlight {
+}
+.review {
+}
+.header2 {
+    font: var(--heading1);
+}
+.p1 {
+    font: var(--heading4);
 }
