--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,7 +5,7 @@
     /** Focus ring that appears when an element is focused via keyboard. */
     --focus-ring-color: #414434;
 
-    --primary1: #f2f2f2;
+    --primary1: #ffffff;
     --primary2: #ffefc7;
     --primary3: #dad3c1;
     --primary4: #767165;
