new in products hover

--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -55,3 +55,11 @@
 .skeleton > .imageWrapper {
     background: #f1ede7;
 }
+.div1 {
+    width: 22vw;
+    &:hover {
+        transition: all 0.3s ease;
+        width: 25vw;
+    }
+    align-content: end;
+}
