--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,15 +5,6 @@
     /** Focus ring that appears when an element is focused via keyboard. */
     --focus-ring-color: #414434;
 
-    --primary1: #f2f2f2;
-    --primary2: #ffefc7;
-    --primary3: #dad3c1;
-    --primary4: #767165;
-    --primary5: #17110d;
-
-    --secondary1: #ced0c4;
-    --secondary2: #9fa295;
-    --secondary3: #707365;
-    --secondary4: #414434;
-    --secondary5: #22241b;
+    --primary1: #ffffff;
+    --primary2: #000000;
 }
