--- a/src/components/featured-products-section/featured-products-section.module.scss
+++ b/src/components/featured-products-section/featured-products-section.module.scss
@@ -30,6 +30,8 @@
     gap: 16px;
     width: max-content;
     align-items: end;
+    justify-content: center;
+    justify-items: center;
 }
 
 @media (max-width: 1024px) {
