--- a/src/components/label-with-arrow/label-with-arrow.module.scss
+++ b/src/components/label-with-arrow/label-with-arrow.module.scss
@@ -3,73 +3,91 @@
     --hover-letter-spacing: 0.15em;
     display: grid;
     width: min-content;
-    grid-template-columns: 1fr;
     align-items: center;
-    gap: 20px;
     font: var(--heading5);
-    font-size: 15px;
+    font-size: 24px;
     letter-spacing: 0.04em;
     text-align: left;
     cursor: pointer;
-    transition: all 0.2s ease;
-    &:hover {
-        letter-spacing: var(--hover-letter-spacing);
-    }
-    height: 48px;
+    padding: 0px;
     justify-items: center;
     color: var(--primary1);
-    padding: 0px 10px;
-    border-radius: 36px;
-    grid-template-rows: 1fr;
+    border-radius: 360px;
     box-sizing: border-box;
     clip-path: border-box;
+    grid-template-columns: var(--horizontalSpacing) min-content var(--horizontalSpacing);
+    grid-template-rows: var(--verticalSpacing) 1fr var(--verticalSpacing);
 }
 
 .label {
+    display: flex;
     white-space: nowrap;
-    grid-area: 1 / 1;
-}
 
-.label[aria-hidden] {
-    visibility: hidden;
-    letter-spacing: var(--hover-letter-spacing);
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
+    z-index: 1;
+
+    height: 100%;
+    align-items: center;
+    box-sizing: border-box;
+    border-radius: 360px;
+    mix-blend-mode: exclusion;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
 }
 
 .icon {
     width: 50px;
     max-width: unset;
 }
-.div1 {
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
-    width: 100%;
-    height: 100%;
+
+@keyframes buttonHover {
+    0% {
+        transform: translateY(-5px);
+    }
+    100% {
+        transform: translateY(calc(-33.333%));
+    }
 }
-.movingUp, .movingDown {
-    background-color: #fff;
-    width: 100px;
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
-    height: 100%;
-    width: 200%;
-    transform: translateY(48px);
-    transition: transform 0s ease-out;
+@keyframes buttonOut {
+    0% {
+        transform: translateY(calc(-33.333%));
+    }
+    100% {
+        transform: translateY(calc(-66.666%));
+    }
 }
-.movingUp{
-    transition: transform 2s ease-out;
-}
-.movingDown {
-    transform: translateY(0px);
-    background-color: #000;
-    transition: transform 0s ease-out;
+.movingUp {
+    background: linear-gradient(
+        var(--bgColor1) 33.333%,
+        var(--bgColor2) 33.33%,
+        var(--bgColor2) 66.66%,
+        var(--bgColor1) 66.666%
+    );
+
+    height: calc(300% + 30px);
+    width: calc(100% + 20px);
+    transform: translateY(-5px);
+    animation-duration: 0.3s;
+    animation-fill-mode: backwards;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    align-self: start;
+    animation-play-state: running;
+    animation-name: buttonOut;
+    grid-row: 1 / 4;
+    grid-column: 1 / 4;
 }
 .root:hover .movingUp {
-    transform: translateY(0px);
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    animation-name: buttonHover;
+    animation-timing-function: ease-in;
 }
-.root:hover .movingDown {
-    
-    transform: translateY(48px);
-   
+.border {
+    border: solid 1px var(--bgColor1);
+    border-radius: 360px;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    grid-row: 1 / 4;
+    grid-column: 1 / 4;
 }
