--- a/src/components/featured-products-section/featured-products-section.module.scss
+++ b/src/components/featured-products-section/featured-products-section.module.scss
@@ -70,4 +70,9 @@
 .div1 {
     height: 800px;
     align-content: end;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.productCard {
 }
