--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -1,6 +1,8 @@
 .productCard {
     display: flex;
     flex-direction: column;
+    width: 20vw;
+    height: 25vw;
 }
 
 .imageWrapper {
@@ -9,12 +11,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--primary2);
 }
 
 .image {
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
     object-fit: cover;
 }
 
