--- a/src/components/label-with-arrow/label-with-arrow.module.scss
+++ b/src/components/label-with-arrow/label-with-arrow.module.scss
@@ -1,37 +1,53 @@
+@keyframes bgbuttonHover {
+    0% {
+        background-position-y: 0%;
+    }
+    100% {
+         background-position-y: 50%;
+    }
+}
+@keyframes bgbuttonOut {
+    0% {
+        background-position-y: 50%;
+    }
+    100% {
+         background-position-y: 100%;
+    }
+}
 .root {
-    background-color: var(--text-color);
-    --hover-letter-spacing: 0.15em;
-    display: grid;
-    width: min-content;
+    display: flex;
+    border-radius: 360px;
+    box-sizing: border-box;
+    cursor: pointer;
+    width: max-content;
     align-items: center;
     font: var(--heading5);
     font-size: 24px;
     letter-spacing: 0.04em;
-    text-align: left;
-    cursor: pointer;
-    padding: 0px;
-    justify-items: center;
+    text-align: center;
+
+    animation-duration: 0.3s;
+    animation-fill-mode: backwards;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    align-self: start;
+    animation-play-state: running;
+    animation-name: bgbuttonOut;
+    background-size: 100% 300%;
+    background-image: linear-gradient(var(--bgColor1) 33.333%, var(--bgColor2) 33.33%, var(--bgColor2) 66.66%, var(--bgColor1) 66.666%);
+    padding: var(--verticalSpacing) var(--horizontalSpacing);
     color: var(--primary1);
-    border-radius: 360px;
-    box-sizing: border-box;
-    clip-path: border-box;
-    grid-template-columns: var(--horizontalSpacing) min-content var(--horizontalSpacing);
-    grid-template-rows: var(--verticalSpacing) 1fr var(--verticalSpacing);
+    border: solid 1px var(--bgColor1);
 }
-
-.label {
-    display: flex;
-    white-space: nowrap;
-
-    z-index: 1;
-
-    height: 100%;
-    align-items: center;
-    box-sizing: border-box;
-    border-radius: 360px;
+.root:hover {
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    animation-name: bgbuttonHover;
+    animation-timing-function: ease-in;
+}
+.root > span{
     mix-blend-mode: exclusion;
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
+    white-space: nowrap;
 }
 
 .icon {
@@ -39,55 +55,3 @@
     max-width: unset;
 }
 
-@keyframes buttonHover {
-    0% {
-        transform: translateY(-5px);
-    }
-    100% {
-        transform: translateY(calc(-33.333%));
-    }
-}
-@keyframes buttonOut {
-    0% {
-        transform: translateY(calc(-33.333%));
-    }
-    100% {
-        transform: translateY(calc(-66.666%));
-    }
-}
-.movingUp {
-    background: linear-gradient(
-        var(--bgColor1) 33.333%,
-        var(--bgColor2) 33.33%,
-        var(--bgColor2) 66.66%,
-        var(--bgColor1) 66.666%
-    );
-
-    height: calc(300% + 30px);
-    width: calc(100% + 20px);
-    transform: translateY(-5px);
-    animation-duration: 0.3s;
-    animation-fill-mode: backwards;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    align-self: start;
-    animation-play-state: running;
-    animation-name: buttonOut;
-    grid-row: 1 / 4;
-    grid-column: 1 / 4;
-}
-.root:hover .movingUp {
-    animation-duration: 0.3s;
-    animation-fill-mode: forwards;
-    animation-name: buttonHover;
-    animation-timing-function: ease-in;
-}
-.border {
-    border: solid 1px var(--bgColor1);
-    border-radius: 360px;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    grid-row: 1 / 4;
-    grid-column: 1 / 4;
-}
