--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -22,15 +22,12 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap');
 
 :root {
-    --heading-font: 'DM Sans', sans-serif;
+    --heading-font: 'DM Sans' sans-serif;
     --text-font: 'DM Sans', sans-serif;
 
     --heading1: 800 120px/1 'DM Sans', sans-serif;
     --heading2: 800 100px/0.94 'DM Sans', sans-serif;
     --heading3: 800 60px/1.05 'DM Sans', sans-serif;
-    --heading4: 400 40px/1.1 'DM Sans', sans-serif;
-    --heading5: 600 24px/1 'DM Sans', sans-serif;
-    --heading6: 400 20px/1.2 'DM Sans', sans-serif;
 
     --paragraph1: 400 20px/1.2 'DM Sans', sans-serif;
     --paragraph2: 400 17px/1.3 'DM Sans', sans-serif;
