--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -25,10 +25,10 @@
 }
 
 .image {
-    object-fit: cover;
-    aspect-ratio: 3.5/4;
+    object-fit: contain;
+    aspect-ratio: 3.7/4.2;
     width: 70%;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 .imagePlaceholderIcon {
