--- a/app/routes/_index/route.module.scss
+++ b/app/routes/_index/route.module.scss
@@ -34,6 +34,8 @@
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     height: max-content;
+    margin: 20px;
+    padding: 20px;
 }
 .p1 {
     font: var(--heading4);
