--- a/app/root.module.scss
+++ b/app/root.module.scss
@@ -13,6 +13,8 @@
     flex-direction: column;
     flex-grow: 1;
     padding: 0 var(--pagePaddingHoriz);
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .navigationProgressBar {
