--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -11,6 +11,7 @@
     background: var(--primary3);
     border: 0px solid black;
     border-radius: 14px;
+    transition: all 0.5s ease;
     &:hover {
         width: 24vw;
         height: 30vw;
@@ -85,4 +86,10 @@
 }
 .labelWithArrow {
     margin: 20px;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+}
+
+.productCard:hover .labelWithArrow {
+    opacity: 1;
 }
