--- a/app/routes/_index/route.module.scss
+++ b/app/routes/_index/route.module.scss
@@ -64,3 +64,24 @@
 .speaker1 {
     width: 16vw;
 }
+.categoryLink {
+    width: 50vw;
+}
+.div4 {
+}
+.div5 {
+}
+.section-paddings {
+    padding: 9vw 3vw;
+}
+.div6 {
+    font: var(--heading3);
+}
+.no-padding-bottom {
+}
+.no-padding-bottom {
+    padding-bottom: 0px;
+}
+.small-spacing {
+    margin-bottom: 5vw;
+}
