--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -239,8 +239,7 @@
 /* Text Banner ****************************************************************/
 
 .textBannerSection {
-    min-height: 35vw;
-    padding: 50px 10px;
+    padding: 0px 0vw;
     align-content: center;
 }
 
@@ -279,6 +278,7 @@
     place-content: center;
     overflow: hidden;
     background: #000;
+    width: 50vw;
 }
 
 .linkCardBackground {
@@ -286,10 +286,10 @@
     z-index: 1;
     inset: 0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     opacity: 0.8;
     transition: transform 2.2s cubic-bezier(0.14, 0.4, 0, 1);
+    height: 46vw;
 
     .linkCard:hover > & {
         transform: scale(1.11);
@@ -393,14 +393,18 @@
 /* Cards Section **************************************************************/
 
 .cardsSection {
-    display: flex;
-    gap: 4px;
+    display: grid;
+    gap: 0px;
     margin-bottom: 5%;
+    flex-wrap: wrap;
+    width: 100vw;
+    grid-template-columns: 1fr 1fr;
 }
 
 .cardsSection > * {
     aspect-ratio: 0.75;
     flex: 1 1 0;
+    height: 46vw;
 }
 
 @media (max-width: 768px) {
