--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,8 @@
     font: var(--paragraph1);
     color: var(--text-color);
     --pagePaddingHoriz: max(60px, 20px);
+    --small-spacing: 5vw;
+    --ExtraSmallSpacing: 2.6 vw;
 }
 
 body {
