--- a/app/routes/_index/route.module.scss
+++ b/app/routes/_index/route.module.scss
@@ -84,4 +84,53 @@
 }
 .small-spacing {
     margin-bottom: 5vw;
+    font: var(--heading2);
+}
+.p2 {
+    font: var(--paragraph2);
+    text-align: start;
+    max-width: 65%;
+}
+.div7 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    font: var(--heading3);
+    color: #e90f0f;
+    position: absolute;
+    z-index: 8;
+}
+.p3 {
+    font: var(--paragraph2);
+    max-width: 17vw;
+}
+.StackH3p2 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    max-width: 30vw;
+    align-content: start;
+    text-align: start;
+    gap: 10px;
+    font: var(--heading3);
+}
+.blacktext {
+    color: var(--text-color);
+}
+.header3 {
+    font: var(--heading2);
+}
+.img1 {
+    width: 100%;
+}
+.compareColors {
+}
+.p4 {
+    font: var(--paragraph1);
+}
+.header4 {
+    font: var(--heading2);
+}
+.labelWithArrow {
+    font-weight: 800;
 }
