--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -275,10 +275,10 @@
     position: relative;
     isolation: isolate;
     display: grid;
-    place-content: center;
     overflow: hidden;
     background: #000;
     width: 50vw;
+    padding: 3vw;
 }
 
 .linkCardBackground {
@@ -287,7 +287,7 @@
     inset: 0;
     width: 100%;
     object-fit: fill;
-    opacity: 0.8;
+    opacity: 1;
     transition: transform 2.2s cubic-bezier(0.14, 0.4, 0, 1);
     height: 46vw;
 
@@ -298,11 +298,10 @@
 
 .linkCardTitle {
     z-index: 2;
-    padding: 30px;
-    text-transform: uppercase;
     color: var(--primary1);
-    font: var(--heading4);
+    font: var(--heading3);
     text-align: center;
+    position: static;
 }
 
 @container (max-width: 300px) {
@@ -395,7 +394,7 @@
 .cardsSection {
     display: grid;
     gap: 0px;
-    margin-bottom: 5%;
+    margin-bottom: 0%;
     flex-wrap: wrap;
     width: 100vw;
     grid-template-columns: 1fr 1fr;
@@ -405,6 +404,9 @@
     aspect-ratio: 0.75;
     flex: 1 1 0;
     height: 46vw;
+    justify-items: start;
+    align-items: start;
+    display: flex;
 }
 
 @media (max-width: 768px) {
