--- a/app/routes/_index/route.module.scss
+++ b/app/routes/_index/route.module.scss
@@ -122,15 +122,28 @@
 }
 .img1 {
     width: 100%;
+    border: 0px solid black;
+    border-radius: 0px;
+    height: 36vw;
 }
 .compareColors {
 }
 .p4 {
     font: var(--paragraph1);
+    text-align: center;
 }
 .header4 {
     font: var(--heading2);
 }
 .labelWithArrow {
     font-weight: 800;
+    margin-top: var(--ExtraSmallSpacing);
+}
+.centerTitlePButton {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    margin-bottom: var(--small-spacing);
 }
