--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,8 @@
     --pagePaddingHoriz: max(60px, 20px);
     --small-spacing: 5vw;
     --ExtraSmallSpacing: 2.6vw;
+    --side-padding-desktop: 3vw;
+    --marginDesktop: 2.1vw;
 }
 
 body {
