--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -12,6 +12,8 @@
     position: fixed;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
+    z-index: 2000;
+    margin-top: 0px;
 }
 
 .logo {
