--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@
     --ExtraSmallSpacing: 2.6vw;
     --side-padding-desktop: 3vw;
     --marginDesktop: 2.1vw;
+    --BigSpacingDesktop: 9.3vw;
 }
 
 body {
