--- a/app/routes/_index/route.module.scss
+++ b/app/routes/_index/route.module.scss
@@ -8,9 +8,9 @@
 }
 
 .hero {
-    height: 100vh;
     background-color: var(--primary4);
     padding-top: 180px;
+    min-height: 100vh;
 }
 .newIn {
     background-color: #da3838;
@@ -123,7 +123,7 @@
     font: var(--heading2);
 }
 .img1 {
-    width: 100%;
+    width: 66.5vw;
     border-radius: 16px;
     height: 36vw;
     grid-row: 1 / 2;
@@ -203,7 +203,7 @@
     gap: 5.2 5.2 vw;
     row-gap: 0%;
     padding-bottom: var(--small-spacing);
-    column-gap: var(--marginDesktop);
+    column-gap: var(--small-spacing);
 }
 .p1left {
     font: var(--paragraph1);
@@ -211,6 +211,7 @@
 .div11 {
     margin-bottom: var(--small-spacing);
     display: flex;
+    gap: 10px;
 }
 .reviewsdiv {
     display: grid;
@@ -232,6 +233,8 @@
 }
 .no-padding-top {
     padding: 0px var(--side-padding-desktop);
+    height: 100vh;
+    overflow: scroll;
 }
 .header5 {
     font: var(--heading2);
@@ -239,14 +242,17 @@
     align-items: center;
     flex-direction: column;
     justify-items: start;
+    position: static;
+    top: 20px;
 }
 .div12 {
     align-self: start;
     height: 42vw;
     align-content: center;
+    position: static;
+    top: 20px;
 }
 .div13 {
-    align-content: center;
 }
 .p8 {
     font: var(--paragraph1);
@@ -276,6 +282,8 @@
     column-gap: var(--marginDesktop);
 }
 .second {
+    grid-row: 2 / 3;
+    grid-column: 2 / 4;
 }
 .third {
     grid-row: 3 / 4;
@@ -284,19 +292,36 @@
 }
 .div9 {
     height: 100vh;
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
+    grid-row: 1 / 4;
     top: 0px;
     position: sticky;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    overflow: scroll;
 }
 .fullwidthimg {
     width: 100%;
+    z-index: 800;
 }
 .colorchangeimg {
-    width: 100%;
     border-radius: 16px;
     position: absolute;
+    z-index: 920;
+    width: 100%;
 }
 .right {
     right: 20px;
+}
+
+.bold {
+    font-weight: 800;
+}
+.spec-right {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    z-index: 900;
 }
